сделаны: header, блок с заголовком; начат блок photogallery

--- a/assets/sass/reset.sass
+++ b/assets/sass/reset.sass
@@ -1,3 +1,4 @@
+@import 'variables'
 /* Reset and base styles
 
 *
@@ -12,9 +13,13 @@
 /* Links
 
 a
+  color: $black
   text-decoration: none
+  background-color: transparent
+  cursor: pointer
 
   &:link, &:visited, &:hover
+    color: $black
     text-decoration: none
 
 /* Common
