--- a/assets/sass/index.sass
+++ b/assets/sass/index.sass
@@ -1,10 +1,26 @@
-@import 'reset'
 @import 'variables'
+@import 'reset'
     
 *, *:before, *:after
-    font-family: 'Open Sans'
+    font-family: 'Trebuchet MS', Helvetica, sans-serif
+
+h1
+    font-weight: 700
+    font-size: 58px
+    line-height: 70px
+
+p
+    font-size: 16px
+    font-weight: 400
+    line-height: 26px
+
 .header
     padding: 20px 35px
+    background-color: $white
+    position: fixed
+    top: 0
+    width: 100%
+    z-index: 1
     &__nav
         display: flex
         justify-content: end
@@ -21,6 +37,35 @@
 
 .main
     &__heading
-        min-height: 862px
-        background-image: url('../image/main_background.png')
+        min-height: 952px
+        padding: 570px 355px 0 215px
+        color: $white
+        background-image: url('../image/main_background.jpg')
         background-size: cover
+        box-shadow: inset 0 0 0 100vw rgba(47, 24, 147, 0.3)
+        &__description
+            max-width: 670px
+            font-size: 22px
+            line-height: 32px
+            padding-top: 24px
+    &__photogallery
+        padding: 100px 115px
+        // display: grid
+        // grid-template-columns: repeat(3, 1fr)
+        // grid-template-rows: repeat(3, 1fr)
+        // grid-gap: 1.5rem
+        // grid-gap: 30px
+        display: flex
+        flex-direction: row
+        flex-wrap: wrap
+        justify-content: flex-start
+        align-items: stretch
+        gap: 30px
+        // flex-grow: 1
+        &__img
+            border-radius: 25px
+            max-width: 370px
+            object-fit: cover
+
+
+
