сделана фотогалерея, начат блок с видео

--- a/assets/sass/index.sass
+++ b/assets/sass/index.sass
@@ -8,7 +8,14 @@ h1
     font-weight: 700
     font-size: 58px
     line-height: 70px
-
+h2
+    font-weight: 700
+    font-size: 42px
+    line-height: 52px
+h3
+    font-weight: 500
+    font-size: 22px
+    line-height: 32px
 p
     font-size: 16px
     font-weight: 400
@@ -49,23 +56,72 @@ p
             line-height: 32px
             padding-top: 24px
     &__photogallery
+        max-width: 1400px
         padding: 100px 115px
-        // display: grid
-        // grid-template-columns: repeat(3, 1fr)
-        // grid-template-rows: repeat(3, 1fr)
-        // grid-gap: 1.5rem
-        // grid-gap: 30px
-        display: flex
-        flex-direction: row
-        flex-wrap: wrap
-        justify-content: flex-start
+        margin: 0 auto
+        display: grid
+        grid-template-columns: repeat(3, 1fr)
+        grid-template-rows: repeat(4, 210px)
+        grid-gap: 1.5rem
+        grid-gap: 30px
         align-items: stretch
-        gap: 30px
-        // flex-grow: 1
+        justify-items: stretch
+        grid-template-areas: "A B C" "A E C" "A E F" "D E F"
         &__img
             border-radius: 25px
             max-width: 370px
             object-fit: cover
+            &:nth-child(1)
+                grid-area: A
+            &:nth-child(2)
+                grid-area: B
+            &:nth-child(3)
+                grid-area: C
+            &:nth-child(4)
+                grid-area: D
+            &:nth-child(5)
+                grid-area: E
+            &:nth-child(6)
+                grid-area: F
+    &__visually
+        max-width: 937px
+        padding-top: 100px
+        padding-bottom: 143px
+        margin: 0 auto
+        color: $white
+        &__wrapper
+            background-color: #222228
+        &__el
+            max-width: 770px
+            margin: 0 auto
+            &__title
+                text-align: center
+                padding-bottom: 40px
+            &__video
+                padding-bottom: 90px
+                width: 770px
+                height: 523px
+        &__other
+            display: flex
+            justify-content: row
+            gap: 55px
+            &__el
+                display: flex
+                justify-content: row
+                gap: 30px
+                &__video
+                    width: 170px
+                    height: 110px
+                &__text
+                    &__title
+                        font-weight: 700
+                        font-size: 14px
+                        line-height: 26px
+                        text-transform: uppercase
+                        padding-bottom: 11px
+                    &__info
+                        opacity: 70%
+
 
 
 
