закончен блок с технологиями, начало создания toggle

--- a/assets/sass/variables.sass
+++ b/assets/sass/variables.sass
@@ -1,3 +1,7 @@
 $light-pink: #E93A7D
-$white: #FFFFFF
+$white-backgroud: #FFFFFF
+$gray-background: #222228
+$white-text: #FFFFFF
 $black: #000000
+$gray-text: rgba(21, 20, 57, 0.4)
+$purple-text: #1E0E62
