--- a/assets/sass/index.sass
+++ b/assets/sass/index.sass
@@ -6,7 +6,7 @@
 
 .header
     padding: 20px 35px
-    background-color: $white
+    background-color: $white-backgroud
     position: fixed
     top: 0
     width: 100%
@@ -20,7 +20,7 @@
         font-size: 15px
     &__login
         border-radius: 100px
-        color: $white
+        color: $white-text
         font-size: 18px
         padding: 12px 30px
         background-color: $light-pink
@@ -28,7 +28,7 @@
 .heading
     min-height: 952px
     padding: 570px 355px 0 215px
-    color: $white
+    color: $white-text
     background-image: url('../image/main_background.jpg')
     background-size: cover
     box-shadow: inset 0 0 0 100vw rgba(47, 24, 147, 0.3)
@@ -76,9 +76,9 @@
     padding-top: 100px
     padding-bottom: 143px
     margin: 0 auto
-    color: $white
+    color: $white-text
     &__wrapper
-        background-color: #222228
+        background-color: $gray-background
     &__main-el
         max-width: 770px
         margin: 0 auto
@@ -116,7 +116,7 @@
                     line-height: 26px
                     opacity: 70%
                     
-.models-3D
+.info
     display: flex
     justify-content: space-between
     &__content
@@ -130,19 +130,19 @@
                 font-size: 42px
                 line-height: 52px
                 padding-bottom: 32px
-                color: #1E0E62
+                color: $purple-text
             &__description
                 max-width: 540px
                 font-weight: 500
                 font-size: 22px
                 line-height: 32px
                 padding-bottom: 46px
-                color: rgba(21, 20, 57, 0.4)
+                color: $gray-text
             &__button-detail
                 padding: 12px 30px
                 background-color: $light-pink
                 border-radius: 100px
-                color: $white
+                color: $white-text
         &__technologies
             display: flex
             gap: 85px
@@ -156,14 +156,47 @@
                     font-size: 22px
                     line-height: 32px
                     padding-bottom: 24px
-                    color: #1E0E62
+                    color: $purple-text
                 &__description
                     font-weight: 400
                     font-size: 16px
                     line-height: 26px
-                    color: rgba(21, 20, 57, 0.4)
+                    color: $gray-text
     &__img
         max-width: 485px
 
 
 
+.tariff
+    &__toggle-switch
+        position: relative
+        display: inline-block
+        width: 50px
+        height: 24px
+        input
+            opacity: 0
+            width: 0
+            height: 0
+            &:checked + .tariff__toggle-switch__slider
+                background-color: #4caf50
+                &::before
+                    transform: translateX(26px)
+        &__slider
+            position: absolute
+            cursor: pointer
+            background-color: #ccc
+            border-radius: 24px
+            width: 100%
+            height: 100%
+            transition: background-color 0.3s
+            &::before
+                content: ""
+                position: absolute
+                height: 20px
+                width: 20px
+                left: 4px
+                bottom: 2px
+                background-color: white
+                border-radius: 50%
+                transition: transform 0.3s
+    
