--- a/assets/sass/index.sass
+++ b/assets/sass/index.sass
@@ -33,6 +33,10 @@
         font-size: 18px
         padding: 12px 30px
         background-color: $light-pink
+        transition: all 0.3s
+        &:hover
+            background-color: $dark-pink
+            transition: all 0.3s
 
 .intro
     min-height: 952px
@@ -41,6 +45,8 @@
     background-image: url('../image/main_background.jpg')
     background-size: cover
     box-shadow: inset 0 0 0 100vw rgba(47, 24, 147, 0.3)
+    &__wrapper
+        max-width: 830px
     &__title
         font-weight: 700
         font-size: 58px
@@ -80,9 +86,9 @@
             grid-area: E
         &:nth-child(6)
             grid-area: F
+
 .visually
     background-color: $gray-background
-    
     &__wrapper
         max-width: 957px
         padding-top: 100px
@@ -126,10 +132,11 @@
         font-weight: 400
         line-height: 26px
         opacity: 70%
-                    
+
 .info
     display: flex
-    justify-content: space-between
+    justify-content: center
+    gap: 200px
     &__content
         padding-top: 117px
         padding-left: 115px
@@ -154,6 +161,10 @@
         background-color: $light-pink
         border-radius: 100px
         color: $white-text
+        transition: all 0.3s
+        &:hover
+            background-color: $dark-pink
+            transition: all 0.3s
     &__technologies
         display: flex
         gap: 85px
@@ -178,6 +189,7 @@
             color: $gray-text
     &__img
         max-width: 485px
+        object-fit: cover
 
 
 
@@ -240,15 +252,17 @@
     &__service
         height: 576px
         width: 370px
-        border-radius: 10px
         overflow: hidden
         display: flex
         flex-direction: column
+        border-radius: 10px
         &__img
             max-width: 370px
         &__definition
             flex: 1
             background-color: $item-gray-background
+            border: 2px solid #EBEAED
+            border-radius: 0 0 10px 10px
             padding: 45px 40px 40px 40px
             display: flex
             flex-direction: column
@@ -267,12 +281,81 @@
             line-height: 26px
         &__button
             padding: 12px 55px
-            background-color: $light-pink
+            border: 2px solid #EBEAED
             border-radius: 100px
             font-weight: 500
             font-size: 18px
             line-height: 26px
+            transition: all 0.3s
+            &:hover
+                background-color: #EBEAED
+                color: $black
+                transition: all 0.3s
+            &-recomend
+                background-color: $light-pink
+                transition: all 0.3s
+                border: none
+                &:hover
+                    background-color: $dark-pink
+                    transition: all 0.3s
+                    color: $white-text
 
 
 
-    
+.modal-login
+    position: fixed
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
+    background-color: #222228
+    z-index: 2
+    opacity: 0
+    pointer-events: none
+    width: 570px
+    height: 700px
+    transition: opacity 0.5s ease, pointer-events 0.5s ease
+    border-radius: 10px
+    border: 2px #FFFFFF solid
+    &-show
+        opacity: 1
+        pointer-events: auto
+    &__overlay
+        position: fixed
+        z-index: 1
+        top: 0
+        left: 0
+        bottom: 0
+        right: 0
+        background-color: #000000a3
+        opacity: 0
+        pointer-events: none
+        transition: opacity 0.5s ease, pointer-events 0.5s ease
+        &-show
+            opacity: 1
+            pointer-events: auto
+    &__form-control
+        width: 474px
+        height: 38px
+        position: relative
+        &__input
+            display: block
+            outline: none
+            width: 100%
+            border-bottom: 1px solid #FFFFFF99
+            padding: 15px
+            font-size: 22px
+            color: #FFFFFF99
+            cursor: pointer
+            &:valid + .modal-login__form-control__label, &:focus + .modal-login__form-control__label
+                top: 0
+                font-size: 14px
+        &__label
+            cursor: pointer
+            display: block
+            position: absolute
+            left: 15px
+            top: 18px
+            color: #FFFFFF99
+            font-size: 20px
+            -webkit-transition: .2s
+            transition: .2s
