доделаны модальные окна

--- a/assets/sass/variables.sass
+++ b/assets/sass/variables.sass
@@ -1,5 +1,6 @@
 $light-pink: #E93A7D
 $dark-pink: #D71862
+$checkbox: #FF0D6A
 $white-backgroud: #FFFFFF
 $gray-background: #222228
 $white-text: #FFFFFF
