--- a/assets/sass/index.sass
+++ b/assets/sass/index.sass
@@ -63,7 +63,6 @@
     padding: 100px 115px
     margin: 0 auto
     display: grid
-    grid-template-columns: repeat(3, 1fr)
     grid-template-rows: repeat(4, 210px)
     grid-gap: 1.5rem
     grid-gap: 30px
@@ -302,23 +301,18 @@
 
 
 
-.modal-login
+.modal
     position: fixed
     top: 50%
     left: 50%
     transform: translate(-50%, -50%)
     background-color: #222228
-    z-index: 2
+    z-index: 1
     opacity: 0
     pointer-events: none
-    width: 570px
-    height: 700px
     transition: opacity 0.5s ease, pointer-events 0.5s ease
     border-radius: 10px
     border: 2px #FFFFFF solid
-    &-show
-        opacity: 1
-        pointer-events: auto
     &__overlay
         position: fixed
         z-index: 1
@@ -333,29 +327,69 @@
         &-show
             opacity: 1
             pointer-events: auto
-    &__form-control
-        width: 474px
-        height: 38px
-        position: relative
+    &-login
+        width: 570px
+        height: 700px
+        font-weight: 400
+        color: rgba(255, 255, 255, 0.5)
+        padding: 56px 48px
+        &-show
+            opacity: 1
+            pointer-events: auto
+        &__title
+            font-weight: 700
+            font-size: 42px
+            padding-bottom: 16px
+            color: $white-text
+        &__info
+            font-size: 16px
+            padding-bottom: 56px
+        &__inputs
+            display: flex
+            flex-direction: column
+            gap: 40px
+            padding-bottom: 56px
         &__input
-            display: block
-            outline: none
-            width: 100%
-            border-bottom: 1px solid #FFFFFF99
-            padding: 15px
             font-size: 22px
-            color: #FFFFFF99
-            cursor: pointer
-            &:valid + .modal-login__form-control__label, &:focus + .modal-login__form-control__label
-                top: 0
-                font-size: 14px
-        &__label
-            cursor: pointer
-            display: block
-            position: absolute
-            left: 15px
-            top: 18px
-            color: #FFFFFF99
-            font-size: 20px
-            -webkit-transition: .2s
-            transition: .2s
+            padding-bottom: 8px
+            border-bottom: 1px solid rgba(255, 255, 255, 0.6)
+        &__submit
+            font-size: 18px
+            padding: 24px 188px
+            background-color: $light-pink
+            border-radius: 60px
+            color: $white-text
+            margin-bottom: 32px
+        &__checkbox
+            display: flex
+            align-items: center
+            gap: 14px
+            &-input
+                appearance: none
+                -webkit-appearance: none
+                position: relative
+                width: 39px
+                height: 26px
+                background-color: #D1D1D1
+                border: 1px solid #FFFFFF
+                border-radius: 6px
+                transition: 500ms
+                &:checked
+                    background-color: $checkbox
+    &-thanks
+        height: 204px
+        width: 570px
+        font-weight: 400
+        color: rgba(255, 255, 255, 0.5)
+        padding: 56px 48px
+        &-show
+            opacity: 1
+            pointer-events: auto
+        &__title
+            font-weight: 700
+            font-size: 42px
+            padding-bottom: 16px
+            color: $white-text
+        &__info
+            font-size: 16px
+            padding-bottom: 56px
