--- a/assets/sass/index.sass
+++ b/assets/sass/index.sass
@@ -40,11 +40,13 @@
 
 .intro
     min-height: 952px
-    padding: 570px 355px 0 215px
+    padding: 570px 0px 122px 215px
     color: $white-text
     background-image: url('../image/main_background.jpg')
     background-size: cover
     box-shadow: inset 0 0 0 100vw rgba(47, 24, 147, 0.3)
+    width: 100%
+    height: 100%
     &__wrapper
         max-width: 830px
     &__title
@@ -57,6 +59,8 @@
         max-width: 670px
         font-size: 22px
         padding-top: 24px
+    @media (max-width: 1024px)
+        padding-left: 100px
     
 .photogallery
     max-width: 1400px
@@ -73,6 +77,7 @@
         border-radius: 25px
         max-width: 370px
         object-fit: cover
+        width: 100%
         &:nth-child(1)
             grid-area: A
         &:nth-child(2)
