--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -76,8 +76,6 @@ button {
 input[type=submit] {
   display: inline-block;
   box-shadow: none;
-  background-color: transparent;
-  background: none;
   cursor: pointer;
 }
 input:focus, input:active {
@@ -104,6 +102,16 @@ legend {
   font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 
+.page {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+}
+
 .header {
   padding: 20px 35px;
   background-color: #FFFFFF;
@@ -128,27 +136,119 @@ legend {
   font-size: 18px;
   padding: 12px 30px;
   background-color: #E93A7D;
+  transition: all 0.3s;
+}
+.nav__login:hover {
+  background-color: #D71862;
+  transition: all 0.3s;
+}
+.nav__burger {
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+  height: auto;
+  display: none;
+  padding: 10px 0;
+  margin-left: auto;
+}
+.nav__burger-active.nav__burger__image {
+  background: none;
+}
+.nav__burger-active.nav__burger__image:before {
+  transform-origin: left top;
+  transform: rotate(47deg) translateX(-1px);
+  background-color: black;
+}
+.nav__burger-active.nav__burger__image:after {
+  transform-origin: left bottom;
+  transform: rotate(-45deg) translateX(-1px);
+  background-color: black;
+}
+.nav__burger:focus {
+  outline: none;
+}
+.nav__burger__image {
+  width: 25px;
+  height: 2px;
+  background-color: #252525;
+  position: relative;
+  border-radius: 50px;
+}
+.nav__burger__image:after, .nav__burger__image:before {
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  content: "";
+  display: block;
+  background-color: #252525;
+  transition: transform 0.2s linear;
+}
+.nav__burger__image:after {
+  bottom: -8px;
+}
+.nav__burger__image:before {
+  top: -8px;
+}
+.nav__open {
+  display: flex !important;
+  align-items: center;
+  flex-direction: column;
+  gap: 37px;
+  transition: transform 0.2s linear;
+}
+@media (max-width: 498px) {
+  .nav {
+    display: none;
+  }
+  .nav__burger {
+    display: block;
+  }
 }
 
-.heading {
-  min-height: 952px;
-  padding: 570px 355px 0 215px;
+.intro {
+  max-height: 952px;
+  padding: 570px 0px 122px 215px;
   color: #FFFFFF;
   background-image: url("../image/main_background.jpg");
   background-size: cover;
   box-shadow: inset 0 0 0 100vw rgba(47, 24, 147, 0.3);
+  width: 100%;
+  height: 100%;
 }
-.heading__title {
+.intro__wrapper {
+  max-width: 830px;
+}
+.intro__title {
   font-weight: 700;
   font-size: 58px;
   line-height: 70px;
 }
-.heading__description {
+.intro__description {
   font-weight: 400;
   line-height: 32px;
   max-width: 670px;
   font-size: 22px;
   padding-top: 24px;
+}
+@media (max-width: 1024px) {
+  .intro {
+    padding-left: 100px;
+  }
+}
+@media (max-width: 849px) {
+  .intro {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 150px;
+    padding-bottom: 40px;
+  }
+  .intro__wrapper {
+    margin: 0 auto;
+  }
+  .intro__title {
+    font-size: 40px;
+    line-height: 50px;
+  }
 }
 
 .photogallery {
@@ -156,7 +256,6 @@ legend {
   padding: 100px 115px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(4, 210px);
   grid-gap: 1.5rem;
   grid-gap: 30px;
@@ -169,6 +268,7 @@ legend {
   max-width: 370px;
   -o-object-fit: cover;
      object-fit: cover;
+  width: 100%;
 }
 .photogallery__img:nth-child(1) {
   grid-area: A;
@@ -188,81 +288,150 @@ legend {
 .photogallery__img:nth-child(6) {
   grid-area: F;
 }
+@media (max-width: 1024px) {
+  .photogallery {
+    padding-left: 20px;
+    padding-right: 20px;
+    grid-template-rows: repeat(4, 150px);
+  }
+}
+@media (max-width: 768px) {
+  .photogallery {
+    grid-template-rows: repeat(4, 100px);
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+}
+@media (max-width: 540px) {
+  .photogallery {
+    grid-template-areas: "A F" "A F" "A B" "D E" "C E" "C E";
+  }
+}
+@media (max-width: 375px) {
+  .photogallery {
+    grid-template-areas: "A" "B" "C" "D" "E" "F";
+  }
+}
 
 .visually {
-  max-width: 937px;
+  background-color: #222228;
+}
+.visually__wrapper {
+  max-width: 957px;
   padding-top: 100px;
   padding-bottom: 143px;
   margin: 0 auto;
   color: #FFFFFF;
 }
-.visually__wrapper {
-  background-color: #222228;
-}
-.visually__main-el {
+.visually__main {
   max-width: 770px;
   margin: 0 auto;
   padding-bottom: 90px;
 }
-.visually__main-el__title {
+.visually__title {
   font-weight: 700;
   font-size: 42px;
   line-height: 52px;
   text-align: center;
   padding-bottom: 40px;
 }
-.visually__main-el__video {
-  width: 770px;
-  height: 523px;
+.visually__video--main {
+  width: 100%;
+  height: 433px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
-.visually__other-el {
-  display: flex;
-  justify-content: row;
-  gap: 55px;
-}
-.visually__other-el__el {
-  display: flex;
-  justify-content: row;
-  gap: 30px;
-}
-.visually__other-el__el__video {
+.visually__video--other {
   width: 170px;
   height: 110px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
-.visually__other-el__el__text__title {
+.visually__other {
+  display: flex;
+  justify-content: center;
+  gap: 55px;
+  flex-wrap: wrap;
+}
+.visually__item {
+  display: flex;
+  gap: 30px;
+  max-width: 451px;
+}
+.visually__subtitle {
   font-weight: 700;
   font-size: 14px;
   line-height: 26px;
   text-transform: uppercase;
+  letter-spacing: 2px;
   padding-bottom: 11px;
 }
-.visually__other-el__el__text__info {
+.visually__info {
   font-size: 16px;
   font-weight: 400;
   line-height: 26px;
   opacity: 70%;
 }
+@media (max-width: 990px) {
+  .visually__wrapper {
+    padding-bottom: 40px;
+    padding-top: 40px;
+  }
+  .visually__title {
+    padding-bottom: 20px;
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .visually__main {
+    padding-bottom: 40px;
+  }
+  .visually__item {
+    max-width: 100%;
+  }
+  .visually__other {
+    gap: 30px;
+  }
+}
+@media (max-width: 768px) {
+  .visually__video--main {
+    height: auto;
+  }
+}
+@media (max-width: 460px) {
+  .visually__other {
+    height: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+@media (max-width: 580px) {
+  .visually__item {
+    display: flex;
+    flex-direction: column;
+  }
+}
 
 .info {
   display: flex;
   justify-content: space-between;
+  gap: 20px;
 }
 .info__content {
   padding-top: 117px;
   padding-left: 115px;
 }
-.info__content__heading {
+.info__intro {
   max-width: 570px;
   padding-bottom: 67px;
 }
-.info__content__heading__title {
+.info__title {
   font-weight: 700;
   font-size: 42px;
   line-height: 52px;
   padding-bottom: 32px;
   color: #1E0E62;
 }
-.info__content__heading__description {
+.info__description {
   max-width: 540px;
   font-weight: 500;
   font-size: 22px;
@@ -270,29 +439,40 @@ legend {
   padding-bottom: 46px;
   color: rgba(21, 20, 57, 0.4);
 }
-.info__content__heading__button-detail {
+.info__button-detail {
   padding: 12px 30px;
   background-color: #E93A7D;
   border-radius: 100px;
   color: #FFFFFF;
+  transition: all 0.3s;
 }
-.info__content__technologies {
+.info__button-detail:hover {
+  background-color: #D71862;
+  transition: all 0.3s;
+}
+.info__technologies {
   display: flex;
   gap: 85px;
   max-width: 591px;
+  flex-wrap: wrap;
+  padding-bottom: 89px;
 }
-.info__content__technologies__el__img {
+.info__technology {
+  max-width: 253px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+.info__technology-img {
   max-width: 54px;
-  padding-bottom: 25px;
 }
-.info__content__technologies__el__title {
+.info__technology-title {
   font-weight: 500;
   font-size: 22px;
   line-height: 32px;
-  padding-bottom: 24px;
   color: #1E0E62;
 }
-.info__content__technologies__el__description {
+.info__technology-description {
   font-weight: 400;
   font-size: 16px;
   line-height: 26px;
@@ -300,17 +480,64 @@ legend {
 }
 .info__img {
   max-width: 485px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+@media (max-width: 1210px) {
+  .info__content {
+    padding-left: 50px;
+  }
+  .info__technology {
+    max-width: 200px;
+  }
+}
+@media (max-width: 1039px) {
+  .info__img {
+    max-width: 350px;
+  }
+}
+@media (max-width: 904px) {
+  .info__img {
+    max-width: 150px;
+  }
+}
+@media (max-width: 768px) {
+  .info__intro {
+    padding-bottom: 20px;
+  }
+  .info__content {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 40px;
+  }
+  .info__title {
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .info__description {
+    padding-bottom: 20px;
+  }
+  .info__img {
+    display: none;
+  }
+  .info__technologies {
+    gap: 20px;
+    padding-bottom: 40px;
+  }
+  .info__technology {
+    max-width: 100%;
+  }
 }
 
 .tariff {
+  background-color: #222228;
+}
+.tariff__wrapper {
   color: #FFFFFF;
   padding-top: 100px;
   padding-bottom: 150px;
-  max-width: 770px;
+  max-width: 1170px;
   margin: 0 auto;
-}
-.tariff__wrapper {
-  background-color: #222228;
 }
 .tariff__title {
   font-weight: 700;
@@ -325,24 +552,24 @@ legend {
   justify-content: center;
   padding-bottom: 60px;
 }
-.tariff__variations__toggle-switch {
+.tariff__toggle {
   position: relative;
   display: inline-block;
   width: 42px;
   height: 30px;
 }
-.tariff__variations__toggle-switch__input {
+.tariff__toggle-input {
   opacity: 0;
   width: 0;
   height: 0;
 }
-.tariff__variations__toggle-switch__input:checked + .tariff__toggle-switch__slider {
+.tariff__toggle-input:checked + .tariff__toggle-slider {
   background-color: #25DAC5;
 }
-.tariff__variations__toggle-switch__input:checked + .tariff__toggle-switch__slider::before {
+.tariff__toggle-input:checked + .tariff__toggle-slider::before {
   transform: translateX(12px);
 }
-.tariff__variations__toggle-switch__slider {
+.tariff__toggle-slider {
   position: absolute;
   cursor: pointer;
   background-color: #ABABAB;
@@ -351,7 +578,7 @@ legend {
   height: 100%;
   transition: background-color 0.3s;
 }
-.tariff__variations__toggle-switch__slider::before {
+.tariff__toggle-slider::before {
   content: "";
   position: absolute;
   height: 24px;
@@ -361,4 +588,229 @@ legend {
   background-color: #FFFFFF;
   border-radius: 22px;
   transition: transform 0.3s;
+}
+.tariff__services {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+.tariff__service {
+  height: 576px;
+  width: 370px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+}
+.tariff__service__img {
+  max-width: 370px;
+}
+.tariff__service__definition {
+  flex: 1;
+  background-color: #34343D;
+  border: 2px solid #EBEAED;
+  border-radius: 0 0 10px 10px;
+  padding: 45px 40px 40px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.tariff__service__intro {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 32px;
+  padding-bottom: 16px;
+}
+.tariff__service__description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+}
+.tariff__service__button {
+  padding: 12px 55px;
+  border: 2px solid #EBEAED;
+  border-radius: 100px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 26px;
+  transition: all 0.3s;
+}
+.tariff__service__button:hover {
+  background-color: #EBEAED;
+  color: #000000;
+  transition: all 0.3s;
+}
+.tariff__service__button-recomend {
+  background-color: #E93A7D;
+  transition: all 0.3s;
+  border: none;
+}
+.tariff__service__button-recomend:hover {
+  background-color: #D71862;
+  transition: all 0.3s;
+  color: #FFFFFF;
+}
+@media (max-width: 768px) {
+  .tariff__wrapper {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .tariff__title {
+    font-size: 30px;
+    line-height: 40px;
+    padding-bottom: 20px;
+  }
+  .tariff__variations {
+    padding-bottom: 20px;
+  }
+  .tariff__service {
+    height: auto;
+  }
+  .tariff__service__definition {
+    padding: 15px 10px 10px 10px;
+    gap: 40px;
+  }
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #222228;
+  z-index: 1;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.5s ease, pointer-events 0.5s ease;
+  border-radius: 10px;
+  border: 2px #FFFFFF solid;
+}
+.modal__overlay {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.6392156863);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.5s ease, pointer-events 0.5s ease;
+}
+.modal__overlay-show {
+  opacity: 1;
+  pointer-events: auto;
+}
+.modal-login {
+  width: 570px;
+  height: 700px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.5);
+  padding: 56px 48px;
+}
+.modal-login-show {
+  opacity: 1;
+  pointer-events: auto;
+}
+.modal-login__title {
+  font-weight: 700;
+  font-size: 42px;
+  padding-bottom: 16px;
+  color: #FFFFFF;
+}
+.modal-login__info {
+  font-size: 16px;
+  padding-bottom: 56px;
+}
+.modal-login__inputs {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding-bottom: 56px;
+}
+.modal-login__input {
+  font-size: 22px;
+  padding-bottom: 8px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.6);
+}
+.modal-login__submit {
+  font-size: 18px;
+  padding: 24px 0px;
+  width: 100%;
+  background-color: #E93A7D;
+  border-radius: 60px;
+  color: #FFFFFF;
+  margin-bottom: 32px;
+}
+.modal-login__checkbox {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+}
+.modal-login__checkbox-input {
+  cursor: pointer;
+  -moz-appearance: none;
+       appearance: none;
+  -webkit-appearance: none;
+  position: relative;
+  min-width: 26px;
+  height: 26px;
+  background-color: #D1D1D1;
+  border: 1px solid #FFFFFF;
+  border-radius: 6px;
+  transition: 500ms;
+}
+.modal-login__checkbox-input:checked {
+  background-color: #FF0D6A;
+}
+.modal-thanks {
+  height: 204px;
+  width: 570px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.5);
+  padding: 56px 48px;
+}
+.modal-thanks-show {
+  opacity: 1;
+  pointer-events: auto;
+}
+.modal-thanks__title {
+  font-weight: 700;
+  font-size: 42px;
+  padding-bottom: 16px;
+  color: #FFFFFF;
+}
+.modal-thanks__info {
+  font-size: 16px;
+  padding-bottom: 56px;
+}
+@media (max-width: 600px) {
+  .modal-login {
+    width: 90%;
+    height: auto;
+    padding: 40px 40px;
+  }
+  .modal-login__info {
+    padding-bottom: 20px;
+  }
+  .modal-login__inputs {
+    gap: 20px;
+    padding-bottom: 20px;
+  }
+  .modal__thanks {
+    width: 90%;
+    height: auto;
+    padding: 20px 20px;
+  }
+  .modal__title {
+    font-size: 40px;
+  }
+}
+@media (max-width: 420px) {
+  .modal-login {
+    padding: 20px 20px;
+  }
 }
