--- a/assets/sass/index.sass
+++ b/assets/sass/index.sass
@@ -162,6 +162,8 @@
         grid-template-rows: repeat(4, 150px)
     @media (max-width: 768px)
         grid-template-rows: repeat(4, 100px)
+        padding-top: 40px
+        padding-bottom: 40px 
     @media (max-width: 540px)
         grid-template-areas: "A F" "A F" "A B" "D E" "C E" "C E"
     @media (max-width: 375px)
@@ -188,10 +190,12 @@
     &__video
         &--main
             width: 100%
-            height: 523px
+            height: 433px
+            object-fit: cover
         &--other
             width: 170px
             height: 110px
+            object-fit: cover
     &__other
         display: flex
         justify-content: center
@@ -215,10 +219,10 @@
         opacity: 70%
     @media (max-width: 990px)
         &__wrapper
-            padding-bottom: 50px
-            padding-top: 20px
+            padding-bottom: 40px
+            padding-top: 40px
         &__title
-            padding-bottom: 0px
+            padding-bottom: 20px
             font-size: 30px
             line-height: 40px
         &__main
@@ -227,11 +231,13 @@
             max-width: 100%
         &__video
             &--main
-                height: 100%
+                // height: 100%
+        &__other
+            gap: 30px
     @media (max-width: 768px)
         &__video
             &--main
-                height: 100%
+                height: auto
     @media (max-width: 460px)
         &__other
             height: 100%
@@ -313,7 +319,7 @@
             max-width: 150px
     @media (max-width: 768px)
         &__intro
-            padding-bottom: 40px
+            padding-bottom: 20px
         &__content
             padding-left: 20px
             padding-right: 20px
@@ -321,10 +327,12 @@
         &__title
             font-size: 30px
             line-height: 40px
+        &__description
+            padding-bottom: 20px
         &__img
             display: none
         &__technologies
-            gap: 30px
+            gap: 20px
             padding-bottom: 40px
         &__technology
             max-width: 100%
@@ -441,8 +449,8 @@
                     color: $white-text
     @media (max-width: 768px)
         &__wrapper
-            padding-top: 20px
-            padding-bottom: 20px
+            padding-top: 40px
+            padding-bottom: 40px
         &__title
             font-size: 30px
             line-height: 40px
@@ -511,7 +519,8 @@
             border-bottom: 1px solid rgba(255, 255, 255, 0.6)
         &__submit
             font-size: 18px
-            padding: 24px 188px
+            padding: 24px 0px
+            width: 100%
             background-color: $light-pink
             border-radius: 60px
             color: $white-text
@@ -521,10 +530,11 @@
             align-items: center
             gap: 14px
             &-input
+                cursor: pointer
                 appearance: none
                 -webkit-appearance: none
                 position: relative
-                width: 39px
+                min-width: 26px
                 height: 26px
                 background-color: #D1D1D1
                 border: 1px solid #FFFFFF
@@ -549,4 +559,22 @@
         &__info
             font-size: 16px
             padding-bottom: 56px
-    
+    @media (max-width: 600px) 
+        &-login
+            width: 90%
+            height: auto
+            padding: 40px 40px
+            &__info
+                padding-bottom: 20px
+            &__inputs
+                gap: 20px
+                padding-bottom: 20px
+        &__thanks
+            width: 90%
+            height: auto
+            padding: 20px 20px
+        &__title
+            font-size: 40px
+    @media (max-width: 420px)
+        &-login
+            padding: 20px 20px
